--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<script>window.location.replace("https://me.thepeshka.ru/");</script>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <title>Ilya Peshekhonov</title>
+    </head>
+    <body>
+        <noscript>You need to enable JavaScript to run this app.</noscript>
+        <script>window.location.replace("https://me.thepeshka.ru/");</script>
+    </body>
+</html>
